k8s/06-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: app-frontend:latest
        # imagePullPolicy: IfNotPresent
        imagePullPolicy: Never

        ports:
        - containerPort: 80
