k8s/07-translator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: translator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: translator
  template:
    metadata:
      labels:
        app: translator
    spec:
      containers:
      - name: translator
        image: libretranslate/libretranslate:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 300
        #   timeoutSeconds: 10
        #   periodSeconds: 10
        #   failureThreshold: 5
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 5000
        #   initialDelaySeconds: 60
        #   timeoutSeconds: 10
        #   periodSeconds: 10
        #   failureThreshold: 5
      

---
apiVersion: v1
kind: Service
metadata:
  name: translator-service
spec:
  selector:
    app: translator
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
